tests/baselines/reference/asOperatorNames.errors.txt
tests/cases/conformance/expressions/asOperator/asOperatorNames.ts(2,9): error TS2323: Type 'number' is not comparable to type 'string'.


==== tests/cases/conformance/expressions/asOperator/asOperatorNames.ts (1 errors) ====
    var a = 20;
    var b = a as string;
            ~~~~~~~~~~~
!!! error TS2323: Type 'number' is not comparable to type 'string'.
    var as = "hello";
    var as1 = as as string;
    